# kaggle-m5

./: .gitignore  README.md  app.py  clean.data.dvc  docker-compose.yaml  pyproject.toml
data/interim/: .gitignore
data/raw/: .gitignore  calendar.csv.dvc  sales_train_validation.csv.dvc  sample_submission.csv.dvc  sell_prices.csv.dvc
notebook/exploratory/: 0.1-alee-initial-eda.ipynb  0.2-alee-eda.ipynb  kaggle.m5.calendar.eda.html  kaggle.m5.prices.eda.html  kaggle.m5.train.eda.html
src/: __init__.py
src/data/: cleaner.py
